Fix issues with z-index and nav-menu

--- a/web/src/styles/main.scss
+++ b/web/src/styles/main.scss
@@ -18,7 +18,6 @@ body {
 a {
   color: var(--color-link);
   text-decoration: none;
-  z-index: 2;
 
   &:hover {
     text-decoration: underline;
@@ -30,4 +29,9 @@ summary {
   outline: 0;
   cursor: pointer;
   user-select: none;
+}
+
+a,
+button {
+  z-index: 2;
 }
